Change looks of thread and message views.
- The grey background for the email headers are removed.
- Gravatars are now round in shape instead of square.
- Links to permalink of the message and fixed-font button has been moved to the
  bottom to remove clutter from the top of the message.
- The date format is changed to remove the Day of the week and uses 3 letter
  month names for minimalism.
- Right sidebar is now fixed and doesn't scroll with the page.
- All buttons on the bottom of the email now have a hover property that changes
  their background on mouse hover.
- Quoted part of the email now has a different background. Each level of
  quoting gets a different background till 3-levels of indentation. After,
	which we don't process more indented text.

Fix the bug with wrong quoted names.

Make thread unread view more prominent.

Add some padding to first email to make it visually better.

Unread threads should show up properly.

--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-base.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-base.scss
@@ -36,7 +36,7 @@ nav {
     // general links
     ul.nav-pills li:first-child {
         padding-top: 2px;
-    }   
+    }
 
     // login/logout
     ul.auth a:last-child {
@@ -63,4 +63,19 @@ nav {
     nav .input-group {
         width: 200px;
     }
+}
+
+
+.circle img {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  /* width and height can be anything, as long as they're equal */
+}
+
+.circle-small img {
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  /* width and height can be anything, as long as they're equal */
 }
