Make the unread envelop color blue to be more visible.

--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-overview.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-overview.scss
@@ -48,7 +48,12 @@
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
+
+				.fa-envelope {
+						color: #08c;
+				}
     }
+
     .thread-id {
         font-weight: bold;
         color: $headingColor;
