--- a/hyperkitty/templates/hyperkitty/overview.html
+++ b/hyperkitty/templates/hyperkitty/overview.html
@@ -72,6 +72,7 @@
                   <i class="fa fa-inbox"></i>
                   <span class="hidden-tn hidden-xs">Manage s</span><span class="hidden-sm hidden-md hidden-lg">S</span>ubscription</a>
                 {% endif %}
+                <a href="{% url 'hk_archives_latest' mlist_fqdn=mlist.name %}" class="btn btn-default">{% trans "All Threads" %}</a>
             </div>
             <form name="search" method="get" action="{% url 'hk_search' %}" class="searchbar col-tn-8 col-xs-4 hidden-sm hidden-md hidden-lg" role="search">
                 {% if mlist %}<input type="hidden" name="list" value="{{ mlist.name }}" />{% endif %}
