hyperkitty/templates/hyperkitty/reattach.html: Move href tag outside of translatable string.

--- a/hyperkitty/templates/hyperkitty/reattach.html
+++ b/hyperkitty/templates/hyperkitty/reattach.html
@@ -49,7 +49,7 @@
             <p class="buttons">
                 <button type="submit" class="btn btn-primary">{% trans "Do it" %}</button> {% trans "(there's no undoing!), or" %}
                 <a href="{% url 'hk_thread' mlist_fqdn=mlist.name threadid=thread.thread_id %}"
-                   >{% trans "go back to the thread</a>." %}
+                   >{% trans "go back to the thread" %}</a>.
             </p>
         </form>
 
