templates/hyperkitty/overview.html: Make action buttons translatable. (The html tags don't seem avoidable, unfortunately).

--- a/hyperkitty/templates/hyperkitty/base.html
+++ b/hyperkitty/templates/hyperkitty/base.html
@@ -190,7 +190,7 @@
     <footer class="footer">
       <div class="container">
         <p class="text-muted">
-            Powered by <a href="http://hyperkitty.readthedocs.org">HyperKitty</a> version {{ HYPERKITTY_VERSION }}.
+            {% trans 'Powered by' %} <a href="http://hyperkitty.readthedocs.org">HyperKitty</a> {% trans 'version' %} {{ HYPERKITTY_VERSION }}.
         </p>
       </div>
     </footer>
