--- a/hyperkitty/templates/hyperkitty/thread.html
+++ b/hyperkitty/templates/hyperkitty/thread.html
@@ -14,7 +14,7 @@
 
 <div class="row view-thread">
 
-{% include 'hyperkitty/fragments/month_list.html' %}
+{% include 'hyperkitty/fragments/month_list.html' with pagename='thread' %}
 
     <div class="col-tn-12 col-sm-10">
 
