--- a/hyperkitty/templates/hyperkitty/fragments/overview_threads.html
+++ b/hyperkitty/templates/hyperkitty/fragments/overview_threads.html
@@ -5,11 +5,6 @@
 
 <div class="list-group">
     {% for thread in threads %}
-        {% if forloop.counter == 6 %}
-        <a class="list-group-item text-center more-threads" href="#">{% trans "More..." %}</a>
-        </div> <!-- close list-group -->
-        <div class="hidden-threads hidden">
-        {% endif %}
         <a class="list-group-item" href="{% url 'hk_thread' threadid=thread.thread_id mlist_fqdn=mlist.name %}">
             <h5 class="list-group-item-heading">
                 <span class="thread-id">#{{ forloop.counter }}</span>
@@ -39,6 +34,7 @@
             </div>
         </a>
     {% endfor %}
+    <a class="list-group-item text-center" href="{% url 'hk_archives_latest' mlist_fqdn=mlist.name %}">{% trans "All Threads" %}</a>
 </div>
 
 {% elif empty %}
