--- a/hyperkitty/templates/hyperkitty/overview.html
+++ b/hyperkitty/templates/hyperkitty/overview.html
@@ -15,12 +15,10 @@
 
 <div class="row">
 
-{% include 'hyperkitty/fragments/month_list.html' with pagename='overview' %}
-
-<div class="overview col-tn-12 col-sm-10">
+<div class="overview col-tn-12 col-sm-12">
     <div class="row">
 
-    <div class="col-tn-12 col-sm-4">
+    <div class="col-tn-12 col-sm-3">
         <section id="title">
             <h2>
                 {% if mlist.display_name %}
@@ -53,19 +51,19 @@
                     </li>
                 </ul>
             </li>
-            <li class="dropdown">
-                {% include 'hyperkitty/fragments/month_list.html' with show_dropdown='True' pagename='overview' %}
-            </li>
         </ul>
 
         <div class="row">
             <a id="home"></a>
-            <div class="list-actions col-tn-6 col-sm-4">
+            <div class="list-actions col-tn-6 col-sm-3">
                 <a href="{% url "hk_message_new" mlist_fqdn=mlist.name %}"
                     class="btn btn-default{% if not user.is_authenticated %} disabled" title="{% trans 'You must be logged-in to create a thread.' %}{% endif %}">
                     <i class="fa fa-plus"></i>
-                    {% trans '<span class="hidden-tn hidden-xs">Start a </span><span class="hidden-sm hidden-md hidden-lg">N</span>ew thread' %}
+                    {% trans '<span class="hidden-tn hidden-xs">Start a n</span><span class="hidden-sm hidden-md hidden-lg">N</span>ew thread' %}
                 </a>
+
+                {% include 'hyperkitty/fragments/month_list.html' with show_dropdown='True' pagename='overview' %}
+
                 {% if 'postorius' in INSTALLED_APPS %}
                 <!-- Subscription -->
                 <a class="btn btn-default" href="{% url 'list_summary' mlist.list_id %}">
@@ -83,56 +81,59 @@
             </form>
         </div> <!-- /container, navbar & search (tiny/xs screens), new thread button -->
     </div> <!-- /container, title/description + the elements above -->
+    <div class="discussions pull-right col-tn-12 col-sm-9">
+      <ul class="nav nav-pills">
+        <li role="presentation" class="active"><a href="#most-recent" aria-controls="most-recent" role="tab" data-toggle="pill">Recent</a></li>
+        <li role="presentation"><a href="#most-active" aria-controls="most-active" role="tab" data-toggle="pill">Most Active</a></li>
+        <li role="presentation"><a href="#most-popular" aria-controls="most-popular" role="tab" data-toggle="pill">Most Popular</a></li>
+        {% if user.is_authenticated %}
+        <li role="presentation"><a href="#flagged" aria-controls="flagged" role="tab" data-toggle="pill">Favorites</a></li>
+        <li role="presentation"><a href="#posted-to" aria-controls="posted-to" role="tab" data-toggle="pill">Posted</a></li>
+        {% endif %}
+      </ul>
+    </div>
+    <div class="tab-content discussions pull-right col-tn-12 col-sm-9">
+        <div id="most-recent" role="tabpanel" class="tab-pane active">
+            <h3>{% trans "Recently active discussions" %}</h3>
+            <div data-load-from="{% url 'hk_list_overview_recent_threads' mlist.name %}">
+                <img alt="{% trans 'Loading...' %}" class="ajaxloader" src="{% static 'hyperkitty/img/ajax-loader.gif' %}" />
+            </div>
+        </div>
 
-    {% if user.is_authenticated %}
-    <div class="discussions pull-right col-tn-12 col-sm-8">
-        <section id="flagged">
+        <div id="most-popular" role="tabpanel" class="tab-pane">
+            <h3>{% trans "Most popular discussions" %}</h3>
+            <div data-load-from="{% url 'hk_list_overview_pop_threads' mlist.name %}">
+                <img alt="{% trans 'Loading...' %}" class="ajaxloader" src="{% static 'hyperkitty/img/ajax-loader.gif' %}" />
+            </div>
+        </div>
+
+        <div id="most-active" role="tabpanel" class="tab-pane">
+            <h3>{% trans "Most active discussions" %}</h3>
+            <div data-load-from="{% url 'hk_list_overview_top_threads' mlist.name %}">
+                <img alt="{% trans 'Loading...' %}" class="ajaxloader" src="{% static 'hyperkitty/img/ajax-loader.gif' %}" />
+            </div>
+        </div>
+        {% if user.is_authenticated %}
+        <div id="flagged" role="tabpanel" class="tab-pane">
             <h3>{% trans "Discussions You've Flagged" %} ({{ flagged_threads|length }})
                 {% if flagged_threads %}<i class="fa fa-caret-right"></i>{% endif %}
             </h3>
             <div data-load-from="{% url 'hk_list_overview_favorites' mlist.name %}">
                 <img alt="{% trans 'Loading...' %}" class="ajaxloader" src="{% static 'hyperkitty/img/ajax-loader.gif' %}" />
             </div>
-        </section>
-        <section id="posted-to">
+        </div>
+        <div id="posted-to" role="tabpanel" class="tab-pane">
             <h3>{% trans "Discussions You've Posted to" %} ({{ threads_posted_to|length }})
                 {% if threads_posted_to %}<i class="fa fa-caret-right"></i>{% endif %}
             </h3>
             <div data-load-from="{% url 'hk_list_overview_posted_to' mlist.name %}">
                 <img alt="{% trans 'Loading...' %}" class="ajaxloader" src="{% static 'hyperkitty/img/ajax-loader.gif' %}" />
             </div>
-        </section>
-    </div> <!-- /home, personalized threads lists -->
-    {% endif %}
-
-    <div class="discussions pull-right col-tn-12 col-sm-8">
-
-        <div class="anchor-link"><a id="most-recent"></a></div>
-        <section id="most-recent">
-            <h3>{% trans "Recently active discussions" %}</h3>
-            <div data-load-from="{% url 'hk_list_overview_recent_threads' mlist.name %}">
-                <img alt="{% trans 'Loading...' %}" class="ajaxloader" src="{% static 'hyperkitty/img/ajax-loader.gif' %}" />
-            </div>
-        </section>
-
-        <div class="anchor-link"><a id="most-popular"></a></div>
-        <section id="most-popular">
-            <h3>{% trans "Most popular discussions" %}</h3>
-            <div data-load-from="{% url 'hk_list_overview_pop_threads' mlist.name %}">
-                <img alt="{% trans 'Loading...' %}" class="ajaxloader" src="{% static 'hyperkitty/img/ajax-loader.gif' %}" />
-            </div>
-        </section>
-
-        <div class="anchor-link"><a id="most-active"></a></div>
-        <section id="most-active">
-            <h3>{% trans "Most active discussions" %}</h3>
-            <div data-load-from="{% url 'hk_list_overview_top_threads' mlist.name %}">
-                <img alt="{% trans 'Loading...' %}" class="ajaxloader" src="{% static 'hyperkitty/img/ajax-loader.gif' %}" />
-            </div>
-        </section>
+        </div>
+        {% endif %}
     </div> <!-- /container, for thread lists -->
 
-    <div class="stats col-tn-12 col-sm-4">
+    <div class="stats col-tn-12 col-sm-3">
         <div class="anchor-link">
             <a id="stats"></a>
         </div>
