Dot not ignore leading whitespace in email body lines.

--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-message.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-message.scss
@@ -117,7 +117,7 @@ $oddEmailColor: rgb(238, 238, 238);
 }
 
 .email-body {
-    white-space: pre-line;
+    white-space: pre-wrap;
     word-wrap: break-word;
 
     span.read-more a,
