--- a/hyperkitty/templates/hyperkitty/ajax/replies.html
+++ b/hyperkitty/templates/hyperkitty/ajax/replies.html
@@ -1,12 +1,9 @@
 {% load i18n %}
 {% load hk_generic %}
-
-                {% for email in replies %}
-                <div class="{% cycle 'odd' 'even' %}"
-                    {% if email.level %}style="margin-left:{{ email.level|multiply:"2" }}em;"{% endif %}>
-                    <!-- Start email -->
-                    <!-- email level: {{ email.level }} -->
-                    {% include 'hyperkitty/messages/message.html' %}
-                    <!-- End of email -->
-                </div>
-                {% endfor %}
+    {% for email in replies %}
+    <div class="{% cycle 'odd' 'even' %} {% if email.level %}reply-level-{{ email.level }}{% endif %}">
+      <!-- Start email -->
+      {% include 'hyperkitty/messages/message.html' %}
+      <!-- End of email -->
+    </div>
+    {% endfor %}
