--- a/hyperkitty/templates/hyperkitty/overview.html
+++ b/hyperkitty/templates/hyperkitty/overview.html
@@ -30,6 +30,7 @@
             <p id="description">{{ mlist.description|default_if_none:"" }}</p>
         </section> <!-- /title & description -->
 
+        <!-- Overview Page for small screens. -->
         <ul class="nav nav-tabs hidden-sm hidden-md hidden-lg">
             <li class="active">
                 <a href="#home">{% trans "Home" %}</a>
@@ -37,23 +38,18 @@
             <li>
                 <a href="#stats">{% trans "Stats" %}</a>
             </li>
-            <li class="dropdown">
-                <a href="" id="navbarDiscussionsDrop" class="dropdown-toggle" data-toggle="dropdown">{% trans "Discussions" %} <b class="caret"></b></a>
-                <ul class="dropdown-menu" role="menu" aria-labelledby="navbarDiscussionsDrop">
-                    <li>
-                        <a href="#most-recent" tabindex="-1">{% trans "most recent" %}</a>
-                    </li>
-                    <li>
-                        <a href="#most-popular" tabindex="-1">{% trans "most popular" %}</a>
-                    </li>
-                    <li>
-                        <a href="#most-active" tabindex="-1">{% trans "most active" %}</a>
-                    </li>
-                </ul>
+            <li>
+              <a href="{% url 'hk_archives_latest' mlist_fqdn=mlist.name %}">{% trans "Threads" %}</a>
+            </li>
+            <li >
+              <a href="{% url "hk_message_new" mlist_fqdn=mlist.name %}"
+                 class="{% if not user.is_authenticated %}disabled"
+                 title="{% trans 'You must be logged-in to create a thread.' %}{% endif %}"><i class="fa fa-plus"></i> New</a>
             </li>
         </ul>
 
-        <div class="row">
+        <!-- Overview page for large screens. -->
+        <div class="row hidden-xs hidden-tn">
             <a id="home"></a>
             <div class="list-actions col-tn-6 col-sm-3">
                 <a href="{% url "hk_message_new" mlist_fqdn=mlist.name %}"
@@ -72,13 +68,6 @@
                 {% endif %}
                 <a href="{% url 'hk_archives_latest' mlist_fqdn=mlist.name %}" class="btn btn-default">{% trans "All Threads" %}</a>
             </div>
-            <form name="search" method="get" action="{% url 'hk_search' %}" class="searchbar col-tn-8 col-xs-4 hidden-sm hidden-md hidden-lg" role="search">
-                {% if mlist %}<input type="hidden" name="list" value="{{ mlist.name }}" />{% endif %}
-                <input id="nav-tab-search" name="q" type="text" class="form-control"
-                       placeholder="{% trans 'Search this list' %}"
-                       {% if query %}value="{{ query }}"{% endif %}
-                       />
-            </form>
         </div> <!-- /container, navbar & search (tiny/xs screens), new thread button -->
     </div> <!-- /container, title/description + the elements above -->
     <div class="discussions pull-right col-tn-12 col-sm-9">
