--- a/hyperkitty/templates/hyperkitty/base.html
+++ b/hyperkitty/templates/hyperkitty/base.html
@@ -181,10 +181,26 @@
     </div>
     {% endif %}
 
-    <div class="container">
+     <div class="modal fade" tabindex="-1" role="dialog" id="keyboard-shortcuts">
+       <div class="modal-dialog" role="document">
+         <div class="modal-content">
+           <div class="modal-header">
+             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+             <h4 class="modal-title">{% trans "Keyboard Shortcuts" %}</h4>
+           </div>
+           <div class="modal-body">
+             <h3>{% trans "Thread View" %}</h3>
+             <ul>
+               <li><code>j</code>: {% trans "Next unread message" %} </li>
+               <li><code>k</code>: {% trans "Previous unread message" %} </li>
+             </ul>
+           </div>
+         </div><!-- /.modal-content -->
+       </div><!-- /.modal-dialog -->
+     </div><!-- /.modal -->
 
+     <div class="container">
         {% block content %} {% endblock %}
-
     </div> <!-- /container for content -->
 
     <footer class="footer">
@@ -199,6 +215,7 @@
     <script src="{% static 'hyperkitty/libs/jquery/jquery-ui-1.10.3.custom.min.js' %}"></script>
     {% compress js %}
     <script type="text/javascript" src="{% static 'hyperkitty/libs/bootstrap/javascripts/bootstrap.min.js' %}" />
+    <script type="text/javascript" src="{% static 'hyperkitty/libs/mousetrap/mousetrap.min.js' %}" />
     <script type="text/javascript" src="{% static 'hyperkitty/libs/jquery.expander.js' %}" />
     <script type="text/javascript" src="{% static 'hyperkitty/libs/d3.v2.min.js' %}" />
     <script type="text/javascript" src="{% static 'hyperkitty/libs/jquery.hotkeys.js' %}" />
