Add keyboard shortcuts to jump to all threads.

--- a/hyperkitty/templates/hyperkitty/base.html
+++ b/hyperkitty/templates/hyperkitty/base.html
@@ -193,6 +193,8 @@
              <ul>
                <li><code>j</code>: {% trans "Next unread message" %} </li>
                <li><code>k</code>: {% trans "Previous unread message" %} </li>
+               <li><code>j a</code>: {% trans "Jump to all threads" %}
+               <li><code>j l</code>: {% trans "Jump to MailingList overview" %}
              </ul>
            </div>
          </div><!-- /.modal-content -->
