--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
@@ -324,7 +324,8 @@ div#months-list {
     position: relative;
     margin: auto;
     padding-top: 3px;
-    background-color: $pre-bg;
+    // keep it transparent to be visible on hover
+    background-color: transparent;
     // default behavior is to hide axes
     .axis path, .chart-data .axis line {
         display: none;
