--- a/hyperkitty/templates/hyperkitty/index.html
+++ b/hyperkitty/templates/hyperkitty/index.html
@@ -88,7 +88,7 @@
     <div class="col-tn-12 col-xs-7 col-md-8">
             {% if all_lists %}
             <p class="hide-switches">
-                <label><input type="checkbox" value="inactive" checked="checked" />{% trans "Hide inactive" %}</label>
+                <label><input type="checkbox" value="inactive" {% if show_inactive %}checked="checked"{% endif %}/>{% trans "Hide inactive" %}</label>
                 <label><input type="checkbox" value="private" />{% trans "Hide private" %}</label>
             </p>
             {% endif %}
