Allow choosing the email to send as.
This fixes a bug such that a user is able to post a new message or reply as a
address other than the user's primary address.

--- a/hyperkitty/templates/hyperkitty/fragments/send_as.html
+++ b/hyperkitty/templates/hyperkitty/fragments/send_as.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-{% if form.sender.choices|length > 1 %}
+{% if form.fields.sender.choices|length > 1 %}
 <p class="text-muted send-as">
     {% trans "This message will be sent as:" %}
     <a href="" class="send-as-default" title="{% trans 'Change sender' %}">
