--- a/hyperkitty/templates/hyperkitty/messages/message.html
+++ b/hyperkitty/templates/hyperkitty/messages/message.html
@@ -53,8 +53,8 @@
         {% endif %}
     </div> <!-- /email-header: gravatar, author-info, date, peramlink, changed_subject -->
 
-    <div class="email-body {% if email.display_fixed %}fixed{% endif %}">
-      {{ email.content|snip_quoted|snip_pgp|wordwrap:90|urlizetrunc:76|escapeemaillinks }}
+    <div class="email-body {% if email.display_fixed %}fixed{% endif %}"
+      >{{ email.content|snip_quoted|snip_pgp|wordwrap:90|urlizetrunc:76|escapeemaillinks }}
     </div>
 
     {% if unfolded and email.attachments.count %}
