--- a/hyperkitty/templates/hyperkitty/base.html
+++ b/hyperkitty/templates/hyperkitty/base.html
@@ -32,9 +32,7 @@
         <div class="container">
             <div class="navbar-header col-md"> <!--part of navbar that's always present-->
                 <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="fa-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                    <span class="fa fa-bars"></span>
                 </button>
                 {% include 'hyperkitty/navbar-brand.html' %}
             </div> <!-- /navbar-header -->
