overview.html: fix superuser typo
With this typo, the list delete buggon never appears for the superuser.

--- a/hyperkitty/templates/hyperkitty/overview.html
+++ b/hyperkitty/templates/hyperkitty/overview.html
@@ -71,7 +71,7 @@
                 {% endif %}
                 <a href="{% url 'hk_archives_latest' mlist_fqdn=mlist.name %}" class="btn btn-outline-primary">{% trans "All Threads" %}</a>
                 </br>
-                {% if user.is_staff or user.is_suerperuser %}
+                {% if user.is_staff or user.is_superuser %}
                     <a href="{% url 'hk_list_delete' mlist_fqdn=mlist.name %}" class="btn btn-danger">{% trans "Delete" %}</a>
                 {% endif %}
             </div>
