Add configuration to disable web posting.

--- a/hyperkitty/templates/hyperkitty/fragments/send_as.html
+++ b/hyperkitty/templates/hyperkitty/fragments/send_as.html
@@ -16,3 +16,4 @@
         <i class="fa fa-external-link" aria-hidden="true"></i></a>
 </p>
 {% endif %}
+<p class="text-muted">{% trans "If you aren't a current list member, sending this message will subscribe you." %}</p>
