Fix wrong padding around the navigation buttons in overview

--- a/hyperkitty/templates/hyperkitty/overview.html
+++ b/hyperkitty/templates/hyperkitty/overview.html
@@ -51,7 +51,7 @@
         </ul>
 
         <!-- Overview page for large screens. -->
-        <div class="row d-none d-md-block">
+        <div class="d-none d-md-block">
             <a id="home"></a>
             <div class="list-actions">
               {% if posting_enabled %}
