--- a/hyperkitty/templates/hyperkitty/base.html
+++ b/hyperkitty/templates/hyperkitty/base.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load compress %}
 {% load static %}
-{% load gravatar %}
+{% load hk_generic %}
 <!DOCTYPE HTML>
 <html>
     <head>
