--- a/hyperkitty/templates/hyperkitty/threads/right_col.html
+++ b/hyperkitty/templates/hyperkitty/threads/right_col.html
@@ -1,5 +1,4 @@
 {% load i18n %}
-{% load gravatar %}
 {% load hk_generic %}
 {% load cache %}
 
@@ -99,8 +98,8 @@
         <ul class="list-unstyled">
             {% for participant in thread.participants|sort_by_name %}
             <li class="row">
-                <div class="participant-gravatar col-tn-2 col-sm-4 col-md-2 circle-small">{% gravatar participant.address 48 %}</div>
-                <div class="participant-name col-tn-8">{{ participant.name|default:participant.address|escapeemail }}</div>
+                <div class="participant-gravatar col-sm-auto circle-small">{% gravatar participant.address 48 %}</div>
+                <div class="participant-name col">{{ participant.name|default:participant.address|escapeemail }}</div>
             </li>
             {% endfor %}
         </ul>
