--- a/hyperkitty/templates/hyperkitty/base.html
+++ b/hyperkitty/templates/hyperkitty/base.html
@@ -210,7 +210,7 @@
     <footer class="footer">
       <div class="container">
         <p class="text-muted">
-            {% trans 'Powered by' %} <a href="http://hyperkitty.readthedocs.org">HyperKitty</a> {% trans 'version' %} {{ HYPERKITTY_VERSION }}.
+            Powered by <a href="https://github.com/michael-lazar/hyperkitty">HyperKitty</a>.
         </p>
       </div>
     </footer>
