--- a/hyperkitty/templates/hyperkitty/base.html
+++ b/hyperkitty/templates/hyperkitty/base.html
@@ -28,89 +28,23 @@
 
     {% include 'hyperkitty/top.html' %}
 
-    <nav class="navbar sticky-top navbar-light bg-light navbar-expand-md">
+    <nav class="navbar sticky-top navbar-light bg-light">
         <div class="container">
-            <div class="navbar-header col-md"> <!--part of navbar that's always present-->
-                <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="fa fa-bars"></span>
-                </button>
+            <div class="navbar-header"> <!--part of navbar that's always present-->
                 {% include 'hyperkitty/navbar-brand.html' %}
             </div> <!-- /navbar-header -->
-
-            <div class="navbar-collapse collapse justify-content-end"> <!--part of navbar that's collapsed on small screens-->
-                <!-- show dropdown for smaller viewports b/c login name/email may be too long -->
-                <!-- only show this extra button/dropdown if we're in small screen sizes -->
-                <div class="nav navbar-nav navbar-right auth dropdown d-sm-none">
-                  <a href="#" role="button" class="btn dropdown-toggle" id="loginDropdownMenu"
-                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        {% if user.is_authenticated %}
-                            {% gravatar user.email 20 %}
-                        {% else %}
-                            <span class="fa fa-bars"></span>
-                        {% endif %}
-                    </a>
-                      {% if user.is_authenticated %}
-                          <div class="dropdown-menu">
-                            <a role="menuitem" tabindex="-1" class="dropdown-item" href="{% url LOGOUT_URL %}?next={% url 'hk_root' %}">
-                                <span class="fa fa-sign-out"></span>
-                                {% trans "Logout" %}
-                            </a>
-                          </div> <!-- dropdown menu -->
-                      {% endif %}
-
+            <form name="search" method="get" action="{% url 'hk_search' %}" class="navbar-form navbar-right" role="search">
+                {% if mlist %}<input type="hidden" name="mlist" value="{{ mlist.name }}" />{% endif %}
+                <div class="input-group">
+                    <input name="q" type="text" class="form-control mr-sm-2"
+                           placeholder="{% if mlist %}{% trans 'Search this list' %}{% else %}{% trans 'Search all lists' %}{% endif %}"
+                           {% if query %}value="{{ query }}"{% endif %}
+                           />
+                    <span class="input-group-btn">
+                        <button class="btn btn-secondary my-2 my-sm-0 " type="submit"><span class="fa fa-search"></span></button>
+                    </span>
                 </div>
-                <form name="search" method="get" action="{% url 'hk_search' %}" class="navbar-form navbar-right my-2 my-lg-2 order-1" role="search">
-                    {% if mlist %}<input type="hidden" name="mlist" value="{{ mlist.name }}" />{% endif %}
-                        <div class="input-group">
-                            <input name="q" type="text" class="form-control mr-sm-2"
-                                   placeholder="{% if mlist %}{% trans 'Search this list' %}{% else %}{% trans 'Search all lists' %}{% endif %}"
-                                   {% if query %}value="{{ query }}"{% endif %}
-                                   />
-                            <span class="input-group-btn">
-                                <button class="btn btn-secondary my-2 my-sm-0 " type="submit"><span class="fa fa-search"></span></button>
-                            </span>
-                        </div>
-                </form>
-                <!-- larger viewports -->
-                <ul class="nav navbar-nav d-none d-sm-flex auth order-3">
-                    {% if user.is_authenticated %}
-                        <li class="dropdown nav-item">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"
-                               role="button" aria-haspopup="true" aria-expanded="false">
-                                {% gravatar user.email 20 %}
-                                {{ user.username|truncatechars:"35" }}
-                                <span class="caret"></span>
-                            </a>
-                            <div class="dropdown-menu">
-                                <a href="{% url LOGOUT_URL %}?next={% url 'hk_root' %}" class="dropdown-item">
-                                    <span class="fa fa-sign-out"></span>
-                                    {% trans "Logout" %}
-                                </a>
-                            </div>
-                        </li>
-                    {% endif %}
-                </ul>
-
-                {% if 'postorius' in INSTALLED_APPS %}
-                <ul class="nav navbar-nav order-2">
-                    <li class="nav-item">
-                    {% if mlist %}
-                    <a href="{% url 'list_summary' mlist.list_id %}" class="nav-link">
-                        <span class="fa fa-cog"></span>
-                        {% trans 'Manage this list' %}
-                    </a>
-                    {% else %}
-                    <a href="{% url 'list_index' %}" class="nav-link">
-                        <span class="fa fa-cog"></span>
-                        {% trans 'Manage lists' %}
-                    </a>
-                    {% endif %}
-                    </li>
-                </ul>
-                {% endif %}
-
-
-            </div> <!--/navbar-collapse -->
+            </form>
         </div> <!-- /container for navbar -->
     </nav>
 
