--- a/hyperkitty/templates/hyperkitty/overview.html
+++ b/hyperkitty/templates/hyperkitty/overview.html
@@ -29,31 +29,11 @@
             <p id="description">{{ mlist.description|default_if_none:"" }}</p>
         </section> <!-- /title & description -->
 
-        <!-- Overview Page for small screens. -->
-        <ul class="nav nav-tabs d-md-none">
-            <li class="nav-item">
-                <a href="#home" class="nav-link active">{% trans "Home" %}</a>
-            </li>
-            <li class="nav-item">
-                <a href="#stats" class="nav-link">{% trans "Stats" %}</a>
-            </li>
-            <li class="nav-item">
-              <a href="{% url 'hk_archives_latest' mlist_fqdn=mlist.name %}" class="nav-link">{% trans "Threads" %}</a>
-            </li>
-            {% if posting_enabled %}
-            <li class="nav-item">
-              <a href="{% url "hk_message_new" mlist_fqdn=mlist.name %}"
-                 class=" nav-link{% if not user.is_authenticated %}disabled"
-                 title="{% trans 'You must be logged-in to create a thread.' %}{% endif %}"><i class="fa fa-plus"></i> New</a>
-            </li>
-            {% endif %}
-        </ul>
-
         <!-- Overview page for large screens. -->
         <div class="d-none d-md-block">
             <a id="home"></a>
             <div class="list-actions">
-                {% include 'hyperkitty/fragments/month_list.html' with show_dropdown='True' pagename='overview' %}
+                {% include 'hyperkitty/fragments/month_list.html' with show_dropdown='False' pagename='overview' %}
             </div>
         </div> <!-- /container, navbar & search (tiny/xs screens), new thread button -->
     </div> <!-- /container, title/description + the elements above -->
