--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
@@ -62,6 +62,10 @@ h1 {
     cursor: pointer;
 }
 
+#thread-list {
+    margin-top: 15px;
+}
+
 // typical hover behavior for table rows
 .row-hover {
     cursor: pointer;
