--- a/hyperkitty/templates/hyperkitty/base.html
+++ b/hyperkitty/templates/hyperkitty/base.html
@@ -28,7 +28,7 @@
 
     {% include 'hyperkitty/top.html' %}
 
-    <nav class="navbar sticky-top navbar-light bg-light">
+    <nav class="navbar navbar-light bg-light">
         <div class="container">
             <div class="navbar-header"> <!--part of navbar that's always present-->
                 {% include 'hyperkitty/navbar-brand.html' %}
