--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-overview.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-overview.scss
@@ -71,17 +71,13 @@
     }
 }
 
-.discussions {
-		padding-top: 10px;
-}
-
 // spacing between sections
 .overview {
     section+section,
     .discussions > section,
     .stats,
     .stats > section {
-        padding-top: 10px;
+        padding-bottom: 10px;
     }
 }
 
