--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
@@ -330,3 +330,11 @@ div#months-list {
         fill: steelBlue;
     }
 }
+
+
+#next-thread {
+    margin-top: 10px;
+}
+#prev-thread {
+    margin-top: 10px;
+}
