--- a/hyperkitty/templates/hyperkitty/base.html
+++ b/hyperkitty/templates/hyperkitty/base.html
@@ -96,7 +96,7 @@
     <footer class="footer">
       <div class="container">
         <p class="text-muted">
-            Powered by <a href="https://github.com/michael-lazar/hyperkitty">HyperKitty</a>.
+            Powered by (a fork of) <a href="https://github.com/michael-lazar/hyperkitty">HyperKitty</a>.
         </p>
       </div>
     </footer>
