--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-threadslist.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-threadslist.scss
@@ -8,6 +8,9 @@
     h1 {
         margin-bottom: 0;
     }
+    h2 {
+        margin-top: 10px;
+    }
     .list-name {
         color: black;
         &:hover {
