--- a/hyperkitty/templates/hyperkitty/thread_list.html
+++ b/hyperkitty/templates/hyperkitty/thread_list.html
@@ -15,20 +15,14 @@
 {% include 'hyperkitty/fragments/month_list.html' %}
     <div id="thread-list" class="col-sm-12 col-md-10">
         <div class="thread-list-header row">
-            <h1 class="col-12">
+            <h2 class="col-12">
                 <a href="{% url 'hk_list_overview' mlist_fqdn=mlist.name %}" class="list-name">
-                    {% if mlist.display_name %}
-                        {{ mlist.display_name }}
-                    {% else %}
-                        {{ mlist.name|until:"@" }}
-                    {% endif %}
+                    {{ mlist.name }}
                 </a>
-                <small class="d-none d-md-block">{{ list_title }}</small>
                 <div class="d-md-none">
-                    {% include 'hyperkitty/fragments/month_list.html' with show_select='True' %}
+                    {% include 'hyperkitty/fragments/month_list.html' %}
                 </div>
-            </h1>
-            <span class="list-address col-12">{{ mlist.name }}</span>
+            </h2>
             <ul class="list-unstyled list-stats thread-list-info col-6 col-sm-8">
                 {% if participants_count %}
                 <li>
@@ -41,13 +35,6 @@
                     {{ threads.paginator.count }} {% trans "discussions" %}
                 </li>
             </ul>
-            <div class="thread-new right col-6 col-sm-4" {% if not user.is_authenticated %}title="{% trans 'You must be logged-in to create a thread.' %}"{% endif %}>
-                <a href="{% url "hk_message_new" mlist_fqdn=mlist.name %}"
-                   class="btn btn-outline-primary{% if not user.is_authenticated %} disabled{% endif %}">
-                    <i class="fa fa-plus"></i>
-                    {% trans '<span class="d-none d-md-inline">Start a n</span><span class="d-md-none">N</span>ew thread' %}
-                </a>
-            </div>
         </div>
 
         {% for thread in threads %}
